# game-churn-prediction

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/raw/: churn_model_with_leakage.pkl  feature_importance.csv  feature_importance_300_trees.csv  feature_importance_binaryA.csv  feature_importance_binaryC.csv  feature_importance_minimal_features.csv  feature_importance_with_leakage.csv  steam_games_dataset.csv
notebooks/: eda.ipynb
outputs/: feature_importance.csv
src/: api.py  data_collection.py  modelo.py  modelo_binaryA.py  modelo_binaryC.py  modelo_gridsearch.py  modelo_leakage.py
